--- a/style.css
+++ b/style.css
@@ -1,3 +1,175 @@
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,500;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,500;1,800&family=Patrick+Hand&display=swap');
+
+html {
+    font-family: "Patrick Hand", sans-serif;
+    font-size: 18px;
+}
+
+/* nav styling*/
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+/*    background-color: white; */
+}
+
+li, a, button {
+    font-family: "Patrick Hand", sans-serif;
+    font-weight: 300;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration:none;
+}
+
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px 10%;
+    background-color: white;
+    border-bottom: 3px #373F47 solid;
+}
+
+.logo {
+    cursor: pointer;
+    order: 1;
+    margin-right: 30px;
+    height: 125px;
+}
+
+nav {
+    order: 2;
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.nav_links li a:hover {
+    color: #244B74;
+    text-decoration: underline;
+}
+
+.contact {
+    order:3;
+}
+button {
+    margin-left: 20px;
+    padding: 10px 25px;
+    background-color: #F2F2F2;
+    border: 5px #6E8EA7 solid;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3x ease 0s;
+}
+
+button:hover {
+    background-color: #244B74;
+    border: 5px white solid;
+    color: white;
+}
+
+/*body styling*/
+.resize {
+    height:500px;
+}
+
+#hero {
+    width: 100%;
+    height: 100vh;
+    background: url(./images/whitewood.webp) no-repeat center / cover;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.container {
+    width:80%;
+    height:50%;
+    max-width: 1200px;
+    margin: 0;
+    display: flex;
+    align-items:flex-start;
+    justify-content: center;
+    background-color: white;
+    border-radius: 25px;
+    border: 15px #6E8EA7 solid;
+    background-image: url(./images/centerWithLogo.png);
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position: center bottom;
+}
+
+.container .info h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    padding: 5%;
+    text-align: center;
+}
+
+.container .info h2 {
+    font-size: 1.25rem;
+    margin-bottom: 2rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+}
+
+.container .info p {
+    font-size: 1.2rem; 
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+}
+
+/* footer style */
+
+.footer-container {
+    display: flex;
+    justify-content: center;
+    padding: 5%;
+    border-top: 3px #373F47 solid;
+}
+
+.footer_links {
+    list-style: none;
+}
+
+.footer_links li {
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.footer_links li a {
+    transition: all 0.3s ease 0s;
+}
+
+.footer_links li a:hover {
+    color: #244B74;
+    text-decoration: underline;
+}
+
+/*.footer-image {
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+    margin-left: 100px;
+}
+*/
+
+/* hw code
 .inline_block {
     display: inline-block;
     vertical-align: top;
@@ -41,4 +213,6 @@ footer ul {
     display: inline-block;
     vertical-align: top;
     padding:
+
 }
+*/
