--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,500;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100;0,200;0,300;0,500;1,800&family=Patrick+Hand&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&display=swap');
 html {
     font-family: "Patrick Hand", sans-serif;
     font-size: 18px;
@@ -17,7 +17,7 @@ html {
 li, a, button {
     font-family: "Patrick Hand", sans-serif;
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: black;
     text-decoration:none;
 }
@@ -28,14 +28,14 @@ header {
     align-items: center;
     padding: 20px 10%;
     background-color: white;
-    border-bottom: 3px #373F47 solid;
+    /*border-bottom: 3px #373F47 solid;*/
 }
 
 .logo {
     cursor: pointer;
     order: 1;
     margin-right: 30px;
-    height: 125px;
+    height: 5rem;
 }
 
 nav {
@@ -66,16 +66,17 @@ nav {
 button {
     margin-left: 20px;
     padding: 10px 25px;
-    background-color: #F2F2F2;
-    border: 5px #6E8EA7 solid;
+    background-color: #244B74;
+    border: 1px #244B74 solid;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3x ease 0s;
+    color: white;
 }
 
 button:hover {
-    background-color: #244B74;
-    border: 5px white solid;
+    background-color: #6E8EA7;
+    border: 1px #6E8EA7 solid;
     color: white;
 }
 
@@ -86,42 +87,46 @@ button:hover {
 
 #hero {
     width: 100%;
-    height: 100vh;
-    background: url(./images/whitewood.webp) no-repeat center / cover;
+    height: 600px;
+    background: url(./images/IMG_1768.png) no-repeat center / cover;
+    opacity: 0.9;
     color: black;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    flex-direction: column;
 }
 
 .container {
-    width:80%;
-    height:50%;
+    width:60%;
+    height:60%;
     max-width: 1200px;
     margin: 0;
-    display: flex;
-    align-items:flex-start;
-    justify-content: center;
-    background-color: white;
+    background-color: #ffffff95;
     border-radius: 25px;
-    border: 15px #6E8EA7 solid;
-    background-image: url(./images/centerWithLogo.png);
+    /*border: 15px #6E8EA7 solid;*/
+    /*background-image: url(./images/centerWithLogo.png);*/
     background-repeat:no-repeat;
     background-size:contain;
     background-position: center bottom;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .container .info h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    padding: 5%;
+    font-size: 1.75rem;
+    margin-bottom: 0.75rem;
+    padding-top:5%;
+    padding-left: 7.5%;
+    padding-right: 7.5%;
     text-align: center;
 }
 
 .container .info h2 {
     font-size: 1.4rem;
-    margin-bottom: 2rem;
+    margin-bottom: 0.5rem;
     padding-left: 10%;
     padding-right: 10%;
     text-align: center;
@@ -134,17 +139,43 @@ button:hover {
     text-align: center;
 }
 
+.img {
+    height: 3rem;
+    width: auto;
+    border-radius: 20px;
+    margin-top: 5%;
+}
+
+.container .info h3 {
+    font-size: 1.6rem;
+    margin-top: 1rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
+}
+
 /* footer style */
 
 .footer-container {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
     padding: 5%;
     border-top: 3px #373F47 solid;
 }
 
+.footer-container p {
+    padding-top: 2%;
+    font-size: 10px;
+}
+
 .footer_links {
     list-style: none;
+    background-color: white;
+    border-radius: 20px;
+    /*padding-top: 0.5em;*/
+    /*border: 3px #373F47 solid;*/
 }
 
 .footer_links li {
@@ -154,11 +185,28 @@ button:hover {
 
 .footer_links li a {
     transition: all 0.3s ease 0s;
+    height: 2rem;
+    width: auto;
+}
+
+.footer_links li a img {
+    height: 2rem;
+    width: auto;
 }
 
 .footer_links li a:hover {
     color: #244B74;
     text-decoration: underline;
+}
+
+.footer_img{
+    height: 3rem;
+    width: auto;
+    margin-top: 1rem;
+    padding: 5px;
+    border: 3px #373F47 solid;
+    background-color: white;
+    border-radius: 20px;
 }
 
 /*.footer-image {
